now update tab icon and title

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/index.css" />
 
-    <title>Chef</title>
+    <title>Eyes Of T</title>
 
+<link rel="icon" href="/tabicon.ico" type="image/x-icon" />
+    
     <meta property="og:image" content="/og-preview.png" />
   </head>
   <body>
