--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Eyes Of T</title>
 
-<link rel="icon" href="/tabicon.ico" type="image/x-icon" />
+<link rel="icon" href="/tabicon.png" type="image/png" />
     
     <meta property="og:image" content="/og-preview.png" />
   </head>
