--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
     <link rel="stylesheet" href="/src/index.css" />
     <link href="https://fonts.googleapis.com/css2?family=Kirang+Haerang&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&family=Caveat&display=swap" rel="stylesheet">
-
     <title>Eyes Of T</title>
     <link rel="icon" href="/tabicon.png" type="image/png" />
     <meta property="og:image" content="/og-preview.png" />
-
-    <!-- Minimal mobile-friendly fallback -->
     <style>
       body {
         margin: 0;
@@ -24,6 +21,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <!-- ✅ This is where Vite will inject your bundled JS on build -->
   </body>
 </html>
