--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
   <body>
     <div id="root"></div>
     <!-- ✅ This is where Vite will inject your bundled JS on build -->
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
