--- a/index.html
+++ b/index.html
@@ -3,24 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Tailwind + Custom Styles -->
     <link rel="stylesheet" href="/src/index.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Kirang+Haerang&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&family=Caveat&display=swap" rel="stylesheet">
+
+    <!-- Fonts: Playful, Creative, Nature-Themed -->
+    <link href="https://fonts.googleapis.com/css2?family=Kirang+Haerang&family=Playfair+Display&family=Inter&family=Caveat&display=swap" rel="stylesheet">
+
     <title>Eyes Of T</title>
+
+    <!-- Favicon + Social Preview -->
     <link rel="icon" href="/tabicon.png" type="image/png" />
     <meta property="og:image" content="/og-preview.png" />
+
     <style>
       body {
         margin: 0;
         padding: 0;
-        font-family: system-ui, sans-serif;
+        font-family: "Playfair Display", serif;
         max-width: 100%;
         overflow-x: hidden;
+        background-color: #f0fdf4; /* light green / nature-inspired */
       }
     </style>
   </head>
   <body>
     <div id="root"></div>
-    <!-- ✅ This is where Vite will inject your bundled JS on build -->
+    <!-- ✅ Vite injects your built JavaScript here -->
   </body>
 </html>
